--- a/web/deployment.yml
+++ b/web/deployment.yml
@@ -1,12 +1,10 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: web
+  name: dc-web
   namespace: prisma
   labels:
-    stage: production
-    name: web
-    app: test
+    app: dc
 spec:
   replicas: 1
   strategy:
@@ -15,18 +13,11 @@ spec:
     metadata:
       labels:
         stage: production
-        name: web
-        app: test
+        name: dc-web
+        app: dc
     spec:
       containers:
-        - name: prisma
-          image: prismagraphql/prisma:1.34
+        - name: dc-web
+          image: gcr.io/dietetic-calculator/dietetic-calculator-web:latest
           ports:
-            - name: prisma-4466
-              containerPort: 4466
-          env:
-            - name: PRISMA_CONFIG
-              valueFrom:
-                configMapKeyRef:
-                  name: prisma-configmap
-                  key: PRISMA_CONFIG
+            - containerPort: 3000
