--- a/web/service.yml
+++ b/web/service.yml
@@ -2,13 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: dc-web
+  namespace: prisma
   labels:
     app: dc
 spec:
+  type: LoadBalancer
   ports:
-    - port: 8080
-      nodePort: 30002
-      protocol: TCP
+  - port: 80
+    targetPort: 3000
+    protocol: TCP
   selector:
     stage: production
     name: dc-web
